 - [DS-319] Replace '/dspace/bin/dsrun org.dspace.browse.ItemCounter' with /dspace/bin/itemcounter
 - [DS-321] DSpace command launcher
 - [DS-327] SWORD temp upload directory missing trailling slash
 - [DS-328] SWORD service documents do not include atom:generator element
 - [DS-333] Adjust SWORD ingest crosswalk to store bibliographic citation

(Larry Stone)
 - [DS-347] Add --quiet option to filter-media (MediaFilterManager) to disable progress messages
 - [DS-297] Move PostgreSQL-specific SQL into etc/postgres for greater clarity
 - [DS-338] Disable cache advice (Expires header) on Bitstream download that requires authorization (XMLUI)
 - [DS-285] Respond to If-Modified-Since request header in XMLUI, also provide Last-Modified response header for Bitstreams
 - [DS-288] Configurable option to hide metadata fields in public UIs and OAI-PMH
 - [DS-236] Authority control for metadata fields and Choice Authority plugin framework
 - [DS-128] Fix repositioning on submission pages after add button is clicked (XMLUI)
 - [DS-255] Protect submission from being lost if exception occurs in CompleteStep
 - [DS-254] Fix response for authorization failure on Bitstream when user is logged-in
 - [DS-232] Parse personal names correctly if there is no space after the last name
 - [DS-191] metadataschemaregistry_seq is not initialized correctly under Oracle
 - [DS-193] OAI RDF crosswalk fails when DC value is null
 - [DS-249] sub-daily utility script does not pass arguments to Java
 - [DS-252] Interpolate variables in the Subject: line of email templates as well
 - [DS-262] Bug in DS-118, new patch included
 - [DS-274] Typo in XSL breaks rendering of dri:xref with class
 - [DS-275] License files not listed on Item Summary page
 - [DS-276] Patch to fix spelling error in Exception page
 - [DS-280] build.xml fails for ant versions below 1.7

(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Mark Diggory)